<resources>
    <string name="app_name">BVCU SDK DEMO</string>
    <string name="authentication_failed">Authentication Failed</string>
    <string name="authentication_failed_tips">Authentication Failed,Please Authenticate first</string>
    <string name="authentication_success">Authentication Success</string>
    <string name="login_text">Login</string>
    <string name="logout_text">Logout</string>
    <string name="login_success">Login Success</string>
    <string name="logout_success">Logout Success</string>
    <string name="has_login">has login</string>
    <string name="not_login">not login</string>
    <string name="audio_video_transfer_text">Current Transmission Channel:Auido and Video</string>
    <string name="video_transfer_text">Current Transmission Channel:Video</string>
    <string name="audio_transfer_text">Current Transmission Channel:Audio</string>
    <string name="current_transfer_text">Current Transmission Channel:</string>
    <string name="upload_file_text">Upload File</string>
    <string name="download_file_text">Download File</string>
    <string name="login_tips">Please Login</string>
    <string name="upload_success_tip">Upload Success</string>
    <string name="upload_fail_tip">Upload Fail</string>
    <string name="download_fail_tip">Download Fail</string>
    <string name="download_success_tip">Download Success</string>
    <string name="select_file_text">Select file</string>
    <string name="select_file_tips">Please select a file to upload</string>
    <string name="progress_dialog_title">Uploading</string>
    <string name="progress_dialog_message">Upload</string>
    <string name="transferStatus">Transfer Status</string>
    <string name="videoPreview">Video Preview</string>
    <string name="transferPercent">Percentage of transmission:</string>
    <string name="LoginParamEmpty">Login information cannot be empty</string>
    <string name="showList">Show list</string>
    <string name="closeList">Close list</string>
    <string name="openVideoSuccess">open device successfully</string>
    <string name="openVideoFail">open device fail</string>
    <string name="deviceList">Device List</string>
    <string name="refreshList">Refresh List</string>
    <string name="ip">IP:</string>
    <string name="port">Port:</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="cancel">Cancel</string>
    <string name="chat">Chat</string>
    <string name="audio_talk">audio talk</string>
    <string name="StartRecord">Start  terminal recording</string>
    <string name="StopRecord">Stop terminal recording</string>
    <string name="RecordTime">Record time(minutes)</string>
    <string name="RecordTimeHint">Please enter a number > = 2</string>
    <string name="OperationSucceeded">Operation succeeded</string>
    <string name="OperationFailed">Operation Failed</string>
</resources>
