<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/function_layout_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/version_id"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/function_bg"
            android:text="版本："/>

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/login_text" />

        <Button
            android:id="@+id/video_preview_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/videoPreview" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:background="@drawable/function_bg"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/transferStatus"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_transport_channel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal|top"
                android:layout_marginLeft="20dp"
                android:gravity="center"
                android:text="@string/logout_text"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:background="@drawable/function_bg"
            android:orientation="horizontal">

            <Button
                android:id="@+id/upload_file_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/upload_file_text"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/file_transport_percent"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal|top"
                android:layout_marginLeft="20dp"
                android:gravity="center"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:background="@drawable/function_bg">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/RecordTime"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/record_time_edit_id"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center"
                android:text="2"
                android:hint="@string/RecordTimeHint"
                android:inputType="number"
                android:textSize="13sp"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/start_record_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:text="@string/StartRecord"
                android:textColor="@color/black" />

        </LinearLayout>

        <Button
            android:id="@+id/bt_chat"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/chat" />
    </LinearLayout>

    <SurfaceView
        android:id="@+id/surfaceView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>