<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black">

    <SurfaceView
        android:id="@+id/surface_id"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:id="@+id/device_list_layout"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/device_list_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/deviceList"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/gps_info_text_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text=""
            android:textColor="@color/black"
            android:textSize="15sp"
            android:visibility="gone" />

        <ListView
            android:id="@+id/device_list_view_id"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:orientation="vertical">

        <Button
            android:id="@+id/refresh_device_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/refreshList"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <Button
            android:id="@+id/show_device_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/closeList"
            android:textColor="@android:color/black"
            android:textSize="15sp" />
    </LinearLayout>

</FrameLayout>